--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
     <artifactId>prototipo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version> 
+    
     <packaging>jar</packaging>
     <dependencies>
-        <dependency>
+    
+    <dependency>
             <groupId>org.netbeans.external</groupId>
             <artifactId>AbsoluteLayout</artifactId>
             <version>RELEASE220</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
     <properties>
